2004-05-12  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b109

	* Fix: Forgot the "empty" case for the strict photo counting.

2004-05-13 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b108

	* New: Introduced first steps of ngettext

	* Fix: reused name="photo_j"

	* Change: return of browserLanguage()

	* New: Additional Paramter for initLanguage()

2004-05-12  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b107

	* Change: Add an optional flag to Album::numPhotos() to do strict
	  counting of photos - this prevents albums from being counted as
	  images for the "total" on albums.php

	* Change: Another _SERVER -> HTTP_SERVER_VARS

	* Change: ChangeLog beautification by the compulsive developer

2004-05-12 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b106

	* Fix: Use of $HTTP_SERVER_VARS instead $_SERVER

	* Fix: Parse Error in do_command

2004-05-11  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.4-cvs-b105

	* Fixed upload (and slideshow) applets when Gallery is embedded in a CMS.
	* Applets now attempt to use the same language as the Gallery (GR language
	  support is sorely lacking at the moment).
	* Integrated applets version 1.4-b10, which also contain many improvements to
	  slideshow and upload. Please see GR ChangeLog for more details.

2004-05-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b104

	* Change: Enable optional syslog reporting for login/out

2004-05-10  Alan Harder <alan.harder@sun.com>  1.4.4-cvs-b103

	* Regenerate highlights as needed when moving albums around.

2004-05-10  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.4-cvs-b102

	* Fixed alt="..." attribute in <img> tags to strip out HTML and then
	  convert double quotes to HTML entities. Previously, displaying image
	  captions with HTML or double quotes would output malformed HTML.
	  (Introduced in 1.4.4-cvs-b72 when we added the caption text to the
	  alt attribute.)

2004-05-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b101
